<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/image1"
    tools:context=".MainActivity"
    android:id="@+id/Linear-Layout">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            //Question 1
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ques1"
                android:textSize="24sp"
                android:text="@string/ques1"
                android:visibility="visible"/>
            //options for question 1 by radio buttons
            <RadioGroup
                android:id="@+id/radio_grp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/opt1"
                    android:text="@string/ans1a"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/opt2"
                    android:text="@string/ans1b"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/opt3"
                    android:text="@string/ans1c"/>

            </RadioGroup>

            //Question 2

            <TextView
                android:id="@+id/ques2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ques2"
                android:textSize="24sp"
                android:visibility="visible" />

            //option for question 3 using radio buttons
            <RadioGroup
                android:id="@+id/radio_grp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/opt1_1"
                    android:text="@string/ans2a"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/opt2_1"
                    android:text="@string/ans2b"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/opt3_1"
                    android:text="@string/ans2c"/>
            </RadioGroup>

            //Question 3
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3"
                android:visibility="visible"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:id="@+id/ques3"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q3_ans"
                android:visibility="visible"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="Enter your answer">
                <requestFocus/>
            </EditText>

            //Question 4
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques4"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                android:textSize="24sp"
                android:id="@+id/ques4"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q4_ans"
                android:visibility="visible"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="Enter your answer" />

            //Question 5
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:visibility="visible"
                android:id="@+id/ques5"
                android:text="@string/ques5"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans5a"
                android:visibility="visible"
                android:id="@+id/ans5_a"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:text="@string/ans5b"
                android:id="@+id/ans5_b"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans5c"
                android:visibility="visible"
                android:id="@+id/ans5_c"/>

            //Question 6
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/que6"
                android:visibility="visible"
                android:textSize="24sp"
                android:text="@string/ques6"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans6a"
                android:visibility="visible"
                android:id="@+id/ans6_a"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans6b"
                android:visibility="visible"
                android:id="@+id/ans6_b"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans6c"
                android:visibility="visible"
                android:id="@+id/ans6_c"/>

            //Question 7

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques7"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                android:textSize="24sp"
                android:id="@+id/ques7"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q7_ans"
                android:visibility="visible"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="Enter your answer"
                android:layout_marginLeft="16dp"/>


            //Question 8

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques8"
                android:textSize="24sp"
                android:visibility="visible"
                android:layout_marginTop="20dp"
                android:id="@+id/ques8"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q8_ans"
                android:visibility="visible"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="Enter your answer"
                android:layout_marginLeft="16dp"/>


            //Question 9
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques9"
                android:textSize="24sp"
                android:visibility="visible"
                android:layout_marginTop="20dp"
                android:id="@+id/ques9"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_grp3">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/images"
                    android:id="@+id/rb9a"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/download"
                    android:id="@+id/rb9b"/>

            </RadioGroup>

            //Question 10

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques10"
                android:textSize="24sp"
                android:visibility="visible"
                android:layout_marginTop="20dp"
                android:id="@+id/ques10"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_grp4">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_crop_square_black_24dp"
                    android:id="@+id/rb10a"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_details_black_24dp"
                    android:id="@+id/rb10b"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:id="@+id/Submit_btn"/>

                <Button
                    android:layout_width="wrap_content"

                    android:text="Reset"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:id="@+id/ResetButton"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>